# parsewise

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: requirements.txt
benchmarks/corpus/real/: H001.metadata.json  H002.metadata.json  H003.metadata.json  H004.metadata.json  IM001.metadata.json  IM002.metadata.json  IM003.metadata.json  IM004.metadata.json  IM005.metadata.json  IM006.metadata.json  IM007.metadata.json  IM008.metadata.json  L001.metadata.json  L002.metadata.json  L003.metadata.json  L004.metadata.json  M001.metadata.json  M002.metadata.json  M003.metadata.json  M004.metadata.json  M005.metadata.json  M006.metadata.json  T001.metadata.json  T002.metadata.json  T003.metadata.json  T004.metadata.json  (+4 more)
benchmarks/results/: appendix_a_per_doc.md  appendix_b_specimen_pages.md  correlations.json  framework_defaults_review.md  layout_complexity.jsonl  reading_order_analysis.jsonl  reading_order_analysis_summary.md  step1a_parsers_raw.jsonl  step1a_parsers_summary.md  step1b_parsers_real_raw.jsonl  step1b_parsers_real_summary.md  step2_ocr_raw.jsonl  step2_ocr_summary.md
benchmarks/schemas/: document_metadata.schema.json  manifest.schema.json  question.schema.json
benchmarks/scripts/: build_appendix_a.py  build_manifest.py  degrade_synth_pdfs.py  download_corpus.py  download_real_pdfs.py  eval_ocr.py  eval_parsers.py  eval_parsers_real.py  init_corpus.py  load_beir.py  metrics.py  ocr_engines.py  parsers.py  plot_complexity_vs_cer.py  reading_order_analysis.py  real_pdfs.py  sample_texts.py  sources.py  specimen_pages.py  stats.py  synth_pdfs.py  synthesize_scans.py  validate_corpus.py
papers/2026-06-pdf-parsers/: OUTLINE.md  PAPER.md  build.sh  style.css
src/parsewise/: __init__.py  configs.py  layout_complexity.py  text_metrics.py
(+11 files in other folders)
