[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsewise"
version = "0.1.0"
description = "Smart PDF text extraction for RAG: agreement-tested wrappers, tuned configs, and an open benchmark."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Lavish Goel", email = "lavishgo@gmail.com" },
]
keywords = [
    "pdf",
    "text-extraction",
    "rag",
    "retrieval-augmented-generation",
    "benchmark",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "pdfminer.six>=20240706",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "waybackpy>=3.0.6",
    "Pillow>=11.0",
    "numpy>=2.0",
    "jsonschema>=4.23",
    "reportlab>=4.2",
    "python-Levenshtein>=0.26",
    "pytesseract>=0.3.13",
    "matplotlib>=3.10",
]

[project.urls]
Homepage = "https://github.com/lavishgoeldev/parsewise"
Repository = "https://github.com/lavishgoeldev/parsewise"
Issues = "https://github.com/lavishgoeldev/parsewise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/parsewise"]
